Fixed Small Issues
*Fixed some small issues, such as player 2's name showing up as "undefined" when player 1 joined the game and started playing before player 2 even joined the game, and the game board font being too small when the chat section was expanded and the client's screen size was on the larger end (frontend/actions/game.js, ticTacToeStyle.css).

--- a/frontend/src/assets/TicTacToe/css/ticTacToeStyle.css
+++ b/frontend/src/assets/TicTacToe/css/ticTacToeStyle.css
@@ -56,7 +56,7 @@ article {
 }
 
 .game-square.reduced {
-    font-size: 1.8em;
+    font-size: 4em;
     height: 6rem;
     width: 6rem;
 }
